--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             display: flex;
             flex-direction: column;
             padding: 0.75rem;
-            padding-bottom: 6rem; /* Increased padding for larger footer area */
+            padding-bottom: 5rem; 
             gap: 0.5rem;
             transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
         }
@@ -119,7 +119,8 @@
         .bg-blue-pool { background: linear-gradient(135deg, #2563eb, #1e40af); }
 
         .score-text {
-            font-size: clamp(10rem, 45vh, 35rem); 
+            /* Significantly reduced minimum size (6rem) and used vw for better width scaling */
+            font-size: clamp(6rem, 28vw, 25rem); 
             font-weight: 900;
             line-height: 0.75;
             transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
@@ -128,7 +129,8 @@
         }
 
         body.advanced-mode .score-text {
-            font-size: clamp(6.5rem, 24vh, 15rem);
+             /* Reduced for advanced mode as well to stay safe */
+            font-size: clamp(4rem, 15vh, 15rem);
         }
 
         .player-name-container {
@@ -149,7 +151,7 @@
             padding: 2px 10px;
             white-space: nowrap; 
             line-height: 1.1;
-            font-size: clamp(1.75rem, 4vw, 2.5rem);
+            font-size: clamp(1.5rem, 4vw, 2.5rem);
             font-weight: 900;
             text-transform: uppercase;
             display: block;
@@ -170,7 +172,7 @@
             z-index: 50;
             display: flex;
             align-items: center;
-            gap: 1.5rem; /* Gap between buttons */
+            gap: 1.5rem;
         }
 
         .action-btn {
@@ -190,10 +192,10 @@
         }
 
         .action-btn.secondary {
-            background: #262626; /* Darker background for side buttons */
-            color: #facc15;      /* Gold icon */
+            background: #262626;
+            color: #facc15;
             border-color: #404040;
-            height: 42px;        /* Slightly smaller */
+            height: 42px;
             width: 42px;
         }
 
@@ -478,6 +480,7 @@
         </div>
     </div>
 
+    <!-- Confirmation Modal -->
     <div id="modal-overlay">
         <div class="modal-content" onclick="event.stopPropagation()">
             <h2 class="text-xl font-black mb-1">RÉINITIALISER ?</h2>
@@ -560,7 +563,10 @@
         }
 
         function handleScoreBoxClick(player, e) {
-            if (document.body.classList.contains('advanced-mode')) handleTimeClick(e);
+            // In advanced mode, clicking the box background resets clock
+            if (document.body.classList.contains('advanced-mode')) {
+                handleTimeClick(e);
+            }
         }
 
         function toggleClock(e) { 
@@ -680,7 +686,7 @@
             if (delta > 0) {
                 playSound(880, 1200, 'sine', 0.05, 0.1);
                 toggleBreak(); 
-                handleTimeClick(); 
+                // DO NOT automatically reset clock on score change
             } else if (delta < 0) {
                 playSound(440, 220, 'sine', 0.04, 0.12);
             }
@@ -822,6 +828,7 @@
             lucide.createIcons();
             updateClockUI();
             setBreak('red'); 
+            // setupLongPress(); removed since we have dedicated button
         };
     </script>
 </body>
