--- a/index.html
+++ b/index.html
@@ -245,6 +245,12 @@
             font-variant-numeric: tabular-nums;
         }
 
+        @media (min-width: 768px) {
+            .score-text {
+                font-size: clamp(10rem, 35vh, 40rem);
+            }
+        }
+
         .score-text-dash {
             font-size: clamp(4rem, 10vh, 10rem);
             font-weight: 900;
